--- a/arch/arm/configs/cyanogenmod_shieldtablet_defconfig
+++ b/arch/arm/configs/cyanogenmod_shieldtablet_defconfig
@@ -4683,3 +4683,10 @@ CONFIG_AVERAGE=y
 # CONFIG_CORDIC is not set
 # CONFIG_DDR is not set
 # CONFIG_VIRTUALIZATION is not set
+
+#
+# S2W/DT2W
+#
+CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
+CONFIG_TOUCHSCREEN_DOUBLETAP2WAKE=y
+CONFIG_TOUCHSCREEN_PREVENT_SLEEP=y
