Tegra K1 CPU and GPU OC

--- a/arch/arm/configs/cyanogenmod_shieldtablet_defconfig
+++ b/arch/arm/configs/cyanogenmod_shieldtablet_defconfig
@@ -4690,3 +4690,9 @@ CONFIG_AVERAGE=y
 CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
 CONFIG_TOUCHSCREEN_DOUBLETAP2WAKE=y
 CONFIG_TOUCHSCREEN_PREVENT_SLEEP=y
+
+#
+# Werewolf tweaks
+#
+CONFIG_TEGRA_CPU_OVERCLOCK=y
+CONFIG_TEGRA_GPU_OVERCLOCK=y
